gitops/apps/powerdns/pdns-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: powerdns
  labels:
    app: powerdns
spec:
  selector:
    matchLabels:
      app: powerdns
  template:
    metadata:
      labels:
        app: powerdns
    spec:
      containers:
      - image: pschiffe/pdns-mysql:4.7
        name: powerdns
        ports:
        - name: api
          containerPort: 8081
        - name: dns
          containerPort: 53
          protocol: UDP
