gitops/apps/powerdns/wui-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: powerdns
  annotations:
    cert-manager.io/cluster-issuer: vault
spec:
  rules:
  - host: "dns.logicmg.intra"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: powerdns-wui
            port:
              number: 80
  tls:
  - hosts:
    - "dns.logicmg.intra"
    secretName: pdns-admin-tls
